--- a/web_portfolio/coffeenie/index.html
+++ b/web_portfolio/coffeenie/index.html
@@ -28,19 +28,19 @@
 				<div class="header">
 					<div class="header_nav">
 						<ul>
-							<li><a href="#">로그인</a></li>
-							<li><a href="#">회원가입</a></li>
-							<li><a href="#">멤버쉽</a></li>
-							<li><a href="#">매장찾기</a></li>
+							<li><a href="#none">로그인</a></li>
+							<li><a href="#none">회원가입</a></li>
+							<li><a href="#none">멤버쉽</a></li>
+							<li><a href="#none">매장찾기</a></li>
 						</ul>
 					</div>
 					<!-- // 헤더 소메뉴 -->
 					<div class="header_logo">
 						<h1>
-							<a href="#" class="pc_logo">
+							<a href="https://ksysky.github.io/portfolio/web_portfolio/coffeenie/index.html" class="pc_logo">
 								<img src="img/coffeenie_main_logo_3.png" alt="커피니 메인 로고1">
 							</a>
-							<a href="#" class="m_logo">
+							<a href="https://ksysky.github.io/portfolio/web_portfolio/coffeenie/index.html" class="m_logo">
 								<img src="img/coffenie_text_logo-02.png" alt="커피니 메인 로고1">
 							</a>
 						</h1>
@@ -64,47 +64,47 @@
 		<div class="nav">
 			<ul>
 				<li>
-					<a href="#">COFFEENIE</a>
+					<a href="#none">COFFEENIE</a>
 					<ul>
-						<li><a href="#">브랜드 소개</a></li>
-						<li><a href="#">커피니 소식</a></li>
-						<li><a href="#">인재 채용</a></li>
-						<li><a href="#">제휴 문의</a></li>
-						<li><a href="#">오시는 길</a></li>
+						<li><a href="#none">브랜드 소개</a></li>
+						<li><a href="#none">커피니 소식</a></li>
+						<li><a href="#none">인재 채용</a></li>
+						<li><a href="#none">제휴 문의</a></li>
+						<li><a href="#none">오시는 길</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="#">MENU</a>
+					<a href="#none">MENU</a>
 					<ul>
-						<li><a href="#">신제품</a></li>
-						<li><a href="#">음료</a></li>
-						<li><a href="#">푸드 &amp; 디저트</a></li>
-						<li><a href="#">기타 제품</a></li>
-						<li><a href="#">영양성분 안내</a></li>
+						<li><a href="#none">신제품</a></li>
+						<li><a href="#none">음료</a></li>
+						<li><a href="#none">푸드 &amp; 디저트</a></li>
+						<li><a href="#none">기타 제품</a></li>
+						<li><a href="#none">영양성분 안내</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="#">STORE</a>
+					<a href="#none">STORE</a>
 					<ul>
-						<li><a href="#">매장 안내</a></li>
+						<li><a href="#none">매장 안내</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="#">MEMBERSHIP</a>
+					<a href="#none">MEMBERSHIP</a>
 					<ul>
-						<li><a href="#">커피니 멤버쉽</a></li>
-						<li><a href="#">포인트</a></li>
-						<li><a href="#">고객의 소리</a></li>
+						<li><a href="#none">커피니 멤버쉽</a></li>
+						<li><a href="#none">포인트</a></li>
+						<li><a href="#none">고객의 소리</a></li>
 					</ul>
 				</li>
 				<li>
-					<a href="#">FRANCHISE</a>
+					<a href="#none">FRANCHISE</a>
 					<ul>
-						<li><a href="#">가맹 개설 안내</a></li>
-						<li><a href="#">인테리어</a></li>
-						<li><a href="#">투자비용 및 프랜차이즈론</a></li>
-						<li><a href="#">FAQ</a></li>
-						<li><a href="#">가맹상담신청</a></li>
+						<li><a href="#none">가맹 개설 안내</a></li>
+						<li><a href="#none">인테리어</a></li>
+						<li><a href="#none">투자비용 및 프랜차이즈론</a></li>
+						<li><a href="#none">FAQ</a></li>
+						<li><a href="#none">가맹상담신청</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -118,53 +118,53 @@
 				</a>
 			</div>
 			<div class="m_login">
-				<a href="#">로그인</a>
-				<a href="#">회원가입</a>
+				<a href="#none">로그인</a>
+				<a href="#none">회원가입</a>
 			</div>
 			<div class="m_menu">
 				<ul>
 					<li>
-						<a href="#">COFFEENIE</a>
+						<a href="#none">COFFEENIE</a>
 						<ul>
-							<li><a href="#">브랜드 소개</a></li>
-							<li><a href="#">커피니 소식</a></li>
-							<li><a href="#">인재 채용</a></li>
-							<li><a href="#">제휴 문의</a></li>
-							<li><a href="#" class="last">오시는 길</a></li>
+							<li><a href="#none">브랜드 소개</a></li>
+							<li><a href="#none">커피니 소식</a></li>
+							<li><a href="#none">인재 채용</a></li>
+							<li><a href="#none">제휴 문의</a></li>
+							<li><a href="#none" class="last">오시는 길</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">MENU</a>
+						<a href="#none">MENU</a>
 						<ul>
-							<li><a href="#">신제품</a></li>
-							<li><a href="#">음료</a></li>
-							<li><a href="#">푸드 &amp; 디저트</a></li>
-							<li><a href="#">기타 제품</a></li>
-							<li><a href="#" class="last">영양성분 안내</a></li>
+							<li><a href="#none">신제품</a></li>
+							<li><a href="#none">음료</a></li>
+							<li><a href="#none">푸드 &amp; 디저트</a></li>
+							<li><a href="#none">기타 제품</a></li>
+							<li><a href="#none" class="last">영양성분 안내</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">STORE</a>
+						<a href="#none">STORE</a>
 						<ul>
-							<li><a href="#" class="last">매장 안내</a></li>
+							<li><a href="#none" class="last">매장 안내</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">MEMBERSHIP</a>
+						<a href="#none">MEMBERSHIP</a>
 						<ul>
-							<li><a href="#">커피니 멤버쉽</a></li>
-							<li><a href="#">포인트</a></li>
-							<li><a href="#" class="last">고객의 소리</a></li>
+							<li><a href="#none">커피니 멤버쉽</a></li>
+							<li><a href="#none">포인트</a></li>
+							<li><a href="#none" class="last">고객의 소리</a></li>
 						</ul>
 					</li>
 					<li>
-						<a href="#">FRANCHISE</a>
+						<a href="#none">FRANCHISE</a>
 						<ul>
-							<li><a href="#">가맹 개설 안내</a></li>
-							<li><a href="#">인테리어</a></li>
-							<li><a href="#">투자비용 및 프랜차이즈론</a></li>
-							<li><a href="#">FAQ</a></li>
-							<li><a href="#" class="last">가맹상담신청</a></li>
+							<li><a href="#none">가맹 개설 안내</a></li>
+							<li><a href="#none">인테리어</a></li>
+							<li><a href="#none">투자비용 및 프랜차이즈론</a></li>
+							<li><a href="#none">FAQ</a></li>
+							<li><a href="#none" class="last">가맹상담신청</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -194,20 +194,20 @@
 				<div class="main_slide">
 					<h3 class="main_tit">NEW MENU</h3>
 					<div class="new_slide">
-						<div><a href="#"><img src="img/new_milky_oolong_latte.gif" alt="밀키우롱라떼"><span>밀키우롱라떼</span></a>
+						<div><a href="#none"><img src="img/new_milky_oolong_latte.gif" alt="밀키우롱라떼"><span>밀키우롱라떼</span></a>
 						</div>
-						<div><a href="#"><img src="img/new_milky_oolong_flaffe.gif"
+						<div><a href="#none"><img src="img/new_milky_oolong_flaffe.gif"
 									alt="밀키우롱프라페"><span>밀키우롱프라페</span></a></div>
-						<div><a href="#"><img src="img/new_coldbrew_dolce_latte.gif"
+						<div><a href="#none"><img src="img/new_coldbrew_dolce_latte.gif"
 									alt="콜드브루돌체라떼"><span>콜드브루돌체라떼</span></a></div>
-						<div><a href="#"><img src="img/new_double_dolce_latte.gif" alt=""><span>더블돌체라떼</span></a></div>
-						<div><a href="#"><img src="img/new_real_strawberry_fraffe.gif"
+						<div><a href="#none"><img src="img/new_double_dolce_latte.gif" alt=""><span>더블돌체라떼</span></a></div>
+						<div><a href="#none"><img src="img/new_real_strawberry_fraffe.gif"
 									alt="리얼딸기프라페"><span>리얼딸기프라페</span></a></div>
-						<div><a href="#"><img src="img/new_real_strawberry_parfait.gif"
+						<div><a href="#none"><img src="img/new_real_strawberry_parfait.gif"
 									alt="리얼딸기파르페"><span>리얼딸기파르페</span></a></div>
-						<div><a href="#"><img src="img/new_real_strawberry_latte.gif"
+						<div><a href="#none"><img src="img/new_real_strawberry_latte.gif"
 									alt="리얼딸기라떼"><span>리얼딸기라떼</span></a></div>
-						<div><a href="#"><img src="img/new_strawberry_chocolate_latte.gif"
+						<div><a href="#none"><img src="img/new_strawberry_chocolate_latte.gif"
 									alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
 					</div>
 				</div>
@@ -238,19 +238,19 @@
 			<div class="md">
 				<h3 class="main_tit md_tit">MD Check!</h3>
 				<div class="md_slide">
-					<div><a href="#"><img src="img/md_kenya.gif" alt="케냐콜드브루"><span>케냐 AA 콜드브루</span></a></div>
-					<div><a href="#"><img src="img/md_brazil.gif" alt="브라질원두"><span>드립백[브라질 X 에티오피아]</span></a></div>
-					<div><a href="#"><img src="img/md_colombia.gif" alt="콜롬비아원두"><span>드립백[콜롬비아 X 코스타리카]</span></a>
+					<div><a href="#none"><img src="img/md_kenya.gif" alt="케냐콜드브루"><span>케냐 AA 콜드브루</span></a></div>
+					<div><a href="#none"><img src="img/md_brazil.gif" alt="브라질원두"><span>드립백[브라질 X 에티오피아]</span></a></div>
+					<div><a href="#none"><img src="img/md_colombia.gif" alt="콜롬비아원두"><span>드립백[콜롬비아 X 코스타리카]</span></a>
 					</div>
-					<div><a href="#"><img src="img/md_greentea.gif" alt="그린티"><span>그린티</span></a></div>
-					<div><a href="#"><img src="img/md_english.gif" alt="잉글리쉬티"><span>잉글리쉬브랙퍼스트티</span></a></div>
-					<div><a href="#"><img src="img/md_buck.gif" alt="메밀차"><span>메밀차</span></a></div>
-					<div><a href="#"><img src="img/md_mint.gif" alt="페퍼민트"><span>페퍼민트티</span></a></div>
-					<div><a href="#"><img src="img/md_chamomile.gif" alt="캐모마일티"><span>캐모마일티</span></a></div>
-					<div><a href="#"><img src="img/md_earlgrey.gif" alt="얼그레이티"><span>얼그레이티</span></a></div>
-					<div><a href="#"><img src="img/md_mason_jar.gif" alt="메이슨자"><span>커피니 메이슨자</span></a></div>
-					<div><a href="#"><img src="img/md_mug.gif" alt="머그컵"><span>커피니 머그컵</span></a></div>
-					<div><a href="#"><img src="img/md_g_mug.jpg" alt="유리머그컵"><span>커피니 유리머그컵</span></a></div>
+					<div><a href="#none"><img src="img/md_greentea.gif" alt="그린티"><span>그린티</span></a></div>
+					<div><a href="#none"><img src="img/md_english.gif" alt="잉글리쉬티"><span>잉글리쉬브랙퍼스트티</span></a></div>
+					<div><a href="#none"><img src="img/md_buck.gif" alt="메밀차"><span>메밀차</span></a></div>
+					<div><a href="#none"><img src="img/md_mint.gif" alt="페퍼민트"><span>페퍼민트티</span></a></div>
+					<div><a href="#none"><img src="img/md_chamomile.gif" alt="캐모마일티"><span>캐모마일티</span></a></div>
+					<div><a href="#none"><img src="img/md_earlgrey.gif" alt="얼그레이티"><span>얼그레이티</span></a></div>
+					<div><a href="#none"><img src="img/md_mason_jar.gif" alt="메이슨자"><span>커피니 메이슨자</span></a></div>
+					<div><a href="#none"><img src="img/md_mug.gif" alt="머그컵"><span>커피니 머그컵</span></a></div>
+					<div><a href="#none"><img src="img/md_g_mug.jpg" alt="유리머그컵"><span>커피니 유리머그컵</span></a></div>
 				</div>
 				<div class="md_slide_btn">
 					<div class="btn_line">│</div>
@@ -275,18 +275,18 @@
 					<div class="ins_img">
 						<h2 class="ins_tit">#커피니 #커피니카페 #coffeenie</h2>
 						<ul>
-							<li><a href="#"><img src="img/coffeenie_insta_1.jpg" alt="인스타이미지1"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_2.jpg" alt="인스타이미지2"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_3.jpg" alt="인스타이미지3"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_4.jpg" alt="인스타이미지4"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_5.jpg" alt="인스타이미지5"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_6.jpg" alt="인스타이미지6"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_7.jpg" alt="인스타이미지7"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_8.jpg" alt="인스타이미지8"></a></li>
-							<li><a href="#"><img src="img/coffeenie_insta_9.jpg" alt="인스타이미지9"></a></li>
-							<li class="none"><a href="#"><img src="img/coffeenie_insta_10.jpg" alt="인스타이미지10"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_1.jpg" alt="인스타이미지1"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_2.jpg" alt="인스타이미지2"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_3.jpg" alt="인스타이미지3"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_4.jpg" alt="인스타이미지4"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_5.jpg" alt="인스타이미지5"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_6.jpg" alt="인스타이미지6"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_7.jpg" alt="인스타이미지7"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_8.jpg" alt="인스타이미지8"></a></li>
+							<li><a href="#none"><img src="img/coffeenie_insta_9.jpg" alt="인스타이미지9"></a></li>
+							<li class="none"><a href="#none"><img src="img/coffeenie_insta_10.jpg" alt="인스타이미지10"></a></li>
 						</ul>
-						<a href="#" class="ins_btn">커피니 인스타그램 @coffeenie_cafe</a>
+						<a href="#none" class="ins_btn">커피니 인스타그램 @coffeenie_cafe</a>
 					</div>
 				</div>
 			</div>
@@ -298,13 +298,13 @@
 				<h2 class="ir_su">푸터</h2>
 				<div class="foot_link">
 					<ul>
-						<li><a href="#">회사소개</a></li>
-						<li><a href="#">인재채용</a></li>
-						<li><a href="#">개인정보취급방침</a></li>
-						<li><a href="#">이용약관</a></li>
-						<li><a href="#">이메일무단수집거부</a></li>
-						<li><a href="#">제휴문의</a></li>
-						<li><a href="#">고객의소리</a></li>
+						<li><a href="#none">회사소개</a></li>
+						<li><a href="#none">인재채용</a></li>
+						<li><a href="#none">개인정보취급방침</a></li>
+						<li><a href="#none">이용약관</a></li>
+						<li><a href="#none">이메일무단수집거부</a></li>
+						<li><a href="#none">제휴문의</a></li>
+						<li><a href="#none">고객의소리</a></li>
 					</ul>
 				</div>
 				<div class="foot_copy_info">
@@ -314,16 +314,16 @@
 				</div>
 				<div class="foot_copy">COPYRIGHTⓒ 2012 COFFEENIE ALL RIGHTS RESERVED.</div>
 				<div class="sns_icon">
-					<a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="#none"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+					<a href="#none"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="#none"><i class="fa fa-twitter" aria-hidden="true"></i></a>
 				</div>
 			</div>
 		</div>
 	</footer>
 	<div id="top_btn">
-		<a href="#"><span class="q_btn">가맹문의</span></a>
-		<a href="#"><span class="top_btn">top</span></a>
+		<a href="#none"><span class="q_btn">가맹문의</span></a>
+		<a href="#none"><span class="top_btn">top</span></a>
 	</div>
 </body>
 <!-- 스크립트 -->
