프로필 사진 수정

--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
                     <h2 class="title_bold">About me</h2>
                     <div class="intro_box">
                         <div class="me">
-                            <div class="me_img ir_pm">
-                                프로필 사진
+                            <div class="img_box">
+                                <div class="me_img ir_pm">
+                                    프로필 사진
+                                </div>
+                                <div class="back1"></div>
+                                <div class="back2"></div>
+                                <p class="hashtag">#신입#신중함#집념#긍정적에너지<br>#계속공부중#일본어가능</p>
                             </div>
-                            <div class="back1"></div>
-                            <div class="back2"></div>
-                            <p class="hashtag">#신입#신중함#집념#긍정적에너지<br>#계속공부중#일본어가능</p>
                         </div>
                         <div class="intro_text">
                             <p><b>이름</b><span>김수연</span></p>
