--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <div class="box box1">
                             <div class="circle">
                                 <div class="circle_img">
-                                    <img src="img/html5.png" alt="html5 icon"><img src="img/css5.png" alt="css5 icon">
+                                    <img src="img/html5_css3.png" alt="html5 css3 icon">
                                 </div>
                             </div>
                             <span class="skill_text">사이트에 알맞는 시멘틱 코드를 사용하여 구조를 세웁니다.<br>
@@ -139,8 +139,7 @@
                         <div class="box box2">
                             <div class="circle">
                                 <div class="circle_img">
-                                    <img src="img/js.png" alt="javascript icon"><img src="img/jquery.png"
-                                        alt="jquery icon">
+                                    <img src="img/js_jq.png" alt="javascript jquery icon">
                                 </div>
                             </div>
                             <span class="skill_text">자바스크립트 ES6 문법을 이해하고 활용할 수 있습니다.<br>
@@ -149,9 +148,7 @@
                         <div class="box box3">
                             <div class="circle">
                                 <div class="circle_img">
-                                    <img class="img1" src="img/photoshop.png" alt="photoshop icon"><br><img class="img2"
-                                        src="img/illustrator.png" alt="illustrator icon"><img class="img3"
-                                        src="img/xd.png" alt="xd icon">
+                                    <img class="img1" src="img/ps_ai_xd.png" alt="photoshop icon">
                                 </div>
                             </div>
                             <span class="skill_text">사진 보정 및 배너, 포스터, 아이콘 등 디자인 작업을 경험했습니다.<br>
