--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -47,7 +47,7 @@
         <div class="container">
             <dl>
                 <dt>구분</dt>
-                <dd>반응형 사이트</dd>
+                <dd>반응형 크로스브라우징</dd>
 
                 <dt>기여도</dt>
                 <dd>디자인 100% + 퍼블리싱 100%</dd>
