커피니 수정

--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
-    
+
     <!-- favicon -->
     <link rel="shortcut icon" href="img/k_favicon.ico">
     <!-- //favicon -->
@@ -47,19 +47,28 @@
         <div class="container">
             <dl>
                 <dt>구분</dt>
-                <dd>반응형 크로스브라우징</dd>
+                <dd class="em">웹표준</dd>
+                <dd class="em">웹호환성</dd>
+                <dd class="em">반응형</dd>
 
                 <dt>기여도</dt>
                 <dd>디자인 100% + 퍼블리싱 100%</dd>
+
+                <dt>사용 언어</dt>
+                <dd>HTML5 + CSS3 + JavaScript + jQuery</dd>
+
+                <dt>사용 라이브러리</dt>
+                <dd>slick + Font Awesome</dd>
 
                 <dt>사용 프로그램</dt>
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt class="intro_tit">프로젝트 소개</dt>
-                <dd class="intro">제가 처음으로 만든 리뉴얼 웹사이트입니다.<br>
-                    기존의 사이트는 전체적으로 폰트가 너무 작았으며 배너에만 시선이 집중되어서 다른 메뉴들은 잘 눈에 띄지 않았습니다. 이를 보완하기 위해 잘 보여야될 메뉴 레이아웃을 위에서부터
-                    순서대로 배치했습니다. 그리고 slick 슬라이드와 css animation을 활용해서 다른 메뉴들에도 시선이 가도록 효과를 주었습니다. 코딩 효과 뿐만 아니라 카페 시즌 음료들의 컨셉에 맞게 배너를
-                    리디자인을 해서 신제품에도 눈이 가도록 노력했습니다.</dd>
+                <dd class="intro">제가 처음으로 만든 리뉴얼 웹사이트입니다.
+                    <br>이 사이트를 리뉴얼 사이트로 선정하게 된 이유는 기존 사이트의 폰트가 너무 작았고 컨테이너 넓이가 좁아 컨텐츠가 중앙에만 몰려 있던 사이트였습니다.
+                    <br>그래서 그에 맞게 폰트 크기 조절과 컨테이너 넓이를 넓혔고 잘 보여야 될 음료와 MD 상품들을 slick 슬라이드를 이용해 한번에 볼 수 있도록 했습니다. 그리고 중간에
+                    커피니 매장 이미지와 가맹 안내가 잘 보이게 CSS 애니메이션을 주어서 시선이 가도록 했습니다. 코딩 효과 뿐만 아니라 카페 시즌 음료들의 컨셉에 맞게 배너를 리디자인을 해서
+                    신제품 음료에도 눈이 가도록 노력했습니다.</dd>
 
                 <dt>주요 컬러</dt>
                 <dd>
@@ -92,8 +101,10 @@
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
-                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705" transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/>
-            </svg>              
+                <path id="패스_12" data-name="패스 12" d="M1035.03,6977.629l10.988-8.705,10.988,8.705"
+                    transform="translate(-1033.625 -6967.924)" fill="none" stroke="#fff" stroke-linecap="round"
+                    stroke-linejoin="round" stroke-width="2" />
+            </svg>
         </a>
     </div>
 </body>
