에스쁘아 수정

--- a/web_portfolio/sub2/index.html
+++ b/web_portfolio/sub2/index.html
@@ -51,17 +51,25 @@
         <div class="container">
             <dl>
                 <dt>구분</dt>
-                <dd>반응형 사이트</dd>
+                <dd class="em">웹표준</dd>
+                <dd class="em">웹호환성</dd>
+                <dd class="em">반응형</dd>
 
                 <dt>기여도</dt>
                 <dd>배너 디자인 100% + 퍼블리싱 100%</dd>
+
+                <dt>사용 언어</dt>
+                <dd>HTML5 + CSS3 + jQuery</dd>
+
+                <dt>사용 라이브러리</dt>
+                <dd>slick</dd>
 
                 <dt>사용 프로그램</dt>
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt class="intro_tit">프로젝트 소개</dt>
                 <dd class="intro">에스쁘아 사이트를 모작한 반응형 사이트입니다.<br>디자인은 똑같이 했지만 구조는 제가 스스로 퍼블리싱했으며 배너 디자인도 100% 스스로 디자인했습니다.
-                    웹표준을 준수하면서 퍼블리싱을 했으며 배너 디자인은 제품 각각의 이미지를 신경써가면서 디자인 하도록 노력했습니다.<br>작업하면서 특히 신경쓴 부분은 검색창을 눌렀을 때 옵션창이
+                    웹표준을 준수했으며 배너 디자인은 제품 각각의 이미지를 신경써가면서 디자인했습니다.<br>작업하면서 특히 신경쓴 부분은 검색창을 눌렀을 때 옵션창이
                     나오는 부분과 REAL REVIEW에 자세히보기를 눌렀을 때 나오는 리뷰의 모달창에 특히 신경을 써서 작업했습니다.</dd>
 
                 <dt>주요 컬러</dt>
