커피니 js 지움

--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -55,7 +55,7 @@
                 <dd>디자인 100% + 퍼블리싱 100%</dd>
 
                 <dt>사용 언어</dt>
-                <dd>HTML5 + CSS3 + JavaScript + jQuery</dd>
+                <dd>HTML5 + CSS3 + jQuery</dd>
 
                 <dt>사용 라이브러리</dt>
                 <dd>slick + Font Awesome</dd>
