앤드백 수정

--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -47,17 +47,25 @@
         <div class="container">
             <dl>
                 <dt>구분</dt>
-                <dd>반응형 사이트</dd>
+                <dd class="em">웹표준</dd>
+                <dd class="em">웹호환성</dd>
+                <dd class="em">반응형</dd>
 
                 <dt>기여도</dt>
-                <dd>디자인 80% + 퍼블리싱 100%</dd>
+                <dd>디자인 70% + 퍼블리싱 100%</dd>
+
+                <dt>사용 언어</dt>
+                <dd>HTML5 + CSS3 + jQuery</dd>
+
+                <dt>사용 라이브러리</dt>
+                <dd>Swiper</dd>
 
                 <dt>사용 프로그램</dt>
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt class="intro_tit">프로젝트 소개</dt>
                 <dd class="intro">기존 사이트는 반응형 사이트가 아니었고 상품 슬라이드가 너무 많아 스크롤을 많이 내려야되는 단점이 있었습니다.<br>
-                    그래서 반응형으로 퍼블리싱을 하였으며 신상품과 베스트의 슬라이드를 같은 곳에서 바로 볼 수 있도록 탭메뉴를 배치해서 쉽게 볼 수 있도록 했습니다.<br>
+                    그래서 반응형으로 퍼블리싱을 하였으며 신상품과 베스트의 슬라이드를 한 곳에서 같이 볼 수 있도록 탭메뉴를 배치해서 쉽게 볼 수 있도록 했습니다.<br>
                     또 이미지와 슬라이드가 반복되는 지루함을 탈피하기 위해서 컨텐츠 배너 부분에는 스크롤하면 텍스트와 이미지에 애니메이션을 사용해서 지루함을 없애도록 했습니다.
                 </dd>
 
