--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -49,19 +49,29 @@
         <div class="container">
             <dl>
                 <dt>구분</dt>
-                <dd>반응형 사이트</dd>
+                <dd class="em">웹표준</dd>
+                <dd class="em">웹호환성</dd>
+                <dd class="em">반응형</dd>
 
                 <dt>기여도</dt>
                 <dd>디자인 100% + 퍼블리싱 100%</dd>
+
+                <dt>사용 언어</dt>
+                <dd>HTML5 + CSS3 + JavaScript + jQuery</dd>
+
+                <dt>사용 라이브러리</dt>
+                <dd>Swiper + lightGallery</dd>
 
                 <dt>사용 프로그램</dt>
                 <dd>포토샵 + 일러스트레이터 + XD + Visual Studio Code</dd>
 
                 <dt>프로젝트 소개</dt>
                 <dd class="intro">
-                    처음 화면에 타이핑 효과와 프로필 사진 뒤에 도형에 애니메이션을 주어서 간결하지만 동적인 느낌을 주었습니다.<br>
-                    가장 중요한 부분인 포트폴리오에는 png의 목업 이미지를 배치해 사이트를 미리 보여주도록 했고 swiper slider를 써서 슬라이딩이 되도록 했습니다.<br>
-                    그리고 반응형 사이트로 만들어 어떤 디바이스로라도 보기 편하도록 퍼블리싱했습니다.<br>
+                    처음 부분에 타이핑 효과와 프로필 사진 뒤에 도형에 CSS 애니메이션을 주어서 간결하지만 동적인 느낌을 주었습니다.<br>
+                    그리고 반응형 사이트로 만들어 어떤 디바이스로라도 보기 편하도록 퍼블리싱했습니다. 또 첫 화면에 해당 디바이스에 따라 데스크탑, 태블릿, 스마트폰 이미지로 바뀌도록 코딩했습니다.<br>
+                    가장 중요한 부분인 포트폴리오에는 목업 이미지를 배치해 사이트를 미리 보여주도록 했고 swiper 라이브러리를 써서 슬라이딩이 되도록 했습니다.<br>
+                    디자인 영역에는 lightGallery를 사용해 이미지를 한번에 보기 편하게 만들었습니다.<br>
+                    마지막으로 contact 부분에 있는 이메일을 누르면 바로 gmail로 연결이 되어 저에게 이메일을 보낼 수 있도록 했습니다.<br>
                 </dd>
 
                 <dt>주요 컬러</dt>
