--- a/web_portfolio/coffeenie/index.html
+++ b/web_portfolio/coffeenie/index.html
@@ -3,8 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-		content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>COFFEENIE</title>
 
 	<!-- style -->
@@ -48,6 +47,7 @@
 					<!-- // 헤더 로고 -->
 					<div class="nav_btn">
 						<h2>
+							<span class="ir_su">메뉴 버튼</span>
 							<a href="#">
 								<i class="fa fa-bars" aria-hidden="true"></i>
 							</a>
@@ -325,11 +325,12 @@
 		<a href="#none"><span class="q_btn">가맹문의</span></a>
 		<a href="#none"><span class="top_btn">top</span></a>
 	</div>
+
+	<!-- 스크립트 -->
+	<script src="js/jquery-3.4.1.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/index.js"></script>
+	<!-- //스크립트 -->
 </body>
-<!-- 스크립트 -->
-<script src="js/jquery-3.4.1.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/index.js"></script>
-<!-- //스크립트 -->
 
 </html>
