웹표준 수정

--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -36,14 +36,14 @@
             </div>
         </div>
     </header>
-    <section class="main_img">
+    <div class="main_img">
         <div class="container">
             <div class="mockup">
                 <img src="img/coffeenie_mockup.png" alt="커피니 웹 목업 이미지">
             </div>
         </div>
-    </section>
-    <section class="explain">
+    </div>
+    <div class="explain">
         <div class="container">
             <dl>
                 <dt>구분</dt>
@@ -92,7 +92,7 @@
                 </dd>
             </dl>
         </div>
-    </section>
+    </div>
     <footer>
         <div class="container">
             <address class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
@@ -107,8 +107,10 @@
             </svg>
         </a>
     </div>
+    <!-- script -->
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/custom.js"></script>
+    <!-- //script -->
 </body>
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/custom.js"></script>
 
 </html>
