--- a/web_portfolio/sub3/index.html
+++ b/web_portfolio/sub3/index.html
@@ -36,14 +36,14 @@
             </div>
         </div>
     </header>
-    <section class="main_img">
+    <div class="main_img">
         <div class="container">
             <div class="mockup">
                 <img src="img/andbag_mockup.png" alt="앤드백 웹 목업 이미지">
             </div>
         </div>
-    </section>
-    <section class="explain">
+    </div>
+    <div class="explain">
         <div class="container">
             <dl>
                 <dt>구분</dt>
@@ -89,7 +89,7 @@
                 </dd>
             </dl>
         </div>
-    </section>
+    </div>
     <footer>
         <address class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
