--- a/web_portfolio/sub4/index.html
+++ b/web_portfolio/sub4/index.html
@@ -38,14 +38,14 @@
             </div>
         </div>
     </header>
-    <section class="main_img">
+    <div class="main_img">
         <div class="container">
             <div class="mockup">
                 <img src="img/portfolio_mockup.png" alt="포트폴리오 웹 목업 이미지">
             </div>
         </div>
-    </section>
-    <section class="explain">
+    </div>
+    <div class="explain">
         <div class="container">
             <dl>
                 <dt>구분</dt>
@@ -94,7 +94,7 @@
                 </dd>
             </dl>
         </div>
-    </section>
+    </div>
     <footer>
         <address>COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
     </footer>
@@ -107,8 +107,11 @@
             </svg>
         </a>
     </div>
+
+    <!-- script -->
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/custom.js"></script>
+    <!-- //script -->
 </body>
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/custom.js"></script>
 
 </html>
