--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
             <!-- portfolio -->
             <section id="portfolio" class="mb90 ani">
                 <h2 class="title_bold">Portfolio</h2>
+                <!-- Slides -->
                 <div class="swiper-container slider">
                     <div class="swiper-wrapper">
-                        <!-- Slides -->
                         <div class="swiper-slide">
                             <div class="mockup_img">
                                 <img src="img/coffeenie_mockup.png" alt="커피니 목업">
@@ -297,6 +297,7 @@
                     <div class="swiper-button-prev"></div>
                     <div class="swiper-button-next"></div>
                 </div>
+                <!-- //Slides -->
             </section>
             <!-- //portfolio -->
 
