--- a/web_portfolio/andbag/index.html
+++ b/web_portfolio/andbag/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header id="header">
         <div class="container">
             <div class="row">
@@ -133,10 +134,11 @@
     </header>
     <!-- //header -->
 
+    <!-- banner1 -->
     <div id="banner1">
+        <!-- Slides -->
         <div class="swiper-container banner1">
             <div class="swiper-wrapper">
-                <!-- Slides -->
                 <div class="swiper-slide s1">
                 </div>
                 <div class="swiper-slide s2">
@@ -148,9 +150,11 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
+        <!-- //Slides -->
     </div>
     <!-- //banner1 -->
 
+    <!-- new & best slide -->
     <div id="main_slide">
         <div class="container">
             <div class="row">
@@ -161,6 +165,7 @@
                             <li><a href="#">베스트</a></li>
                         </ul>
                     </div>
+                    <!-- new -->
                     <div class="swiper-container2 ms_slide">
                         <div class="swiper-wrapper new">
                             <div class="swiper-slide">
@@ -313,7 +318,9 @@
                         <div class="swiper-button-next"></div>
                     </div>
                     <a href="#none" class="all">신상품 전체보기</a>
-                    <!--//new-->
+                    <!--//new -->
+
+                    <!-- best -->
                     <div class="swiper-container2 ms_slide">
                         <div class="swiper-wrapper best">
                             <div class="swiper-slide">
@@ -471,8 +478,9 @@
             </div>
         </div>
     </div>
-    <!-- //main slide -->
+    <!-- //new & best slide -->
 
+    <!-- banner2 -->
     <section id="banner2">
         <div class="container">
             <div class="banner2">
@@ -486,6 +494,7 @@
     </section>
     <!-- //banner2 -->
 
+    <!-- md slide -->
     <section id="md_slide">
         <div class="container">
             <div class="row">
@@ -649,8 +658,9 @@
             </div>
         </div>
     </section>
-    <!-- //md_slide -->
+    <!-- //md slide -->
 
+    <!-- story -->
     <section id="story">
         <div class="container">
             <div class="story">
@@ -665,6 +675,7 @@
     </section>
     <!-- //story -->
 
+    <!-- campaign -->
     <section id="campaign">
         <div class="container">
             <div class="row">
@@ -718,6 +729,7 @@
     </section>
     <!-- //campaign -->
 
+    <!-- footer -->
     <footer id="footer">
         <div class="container">
             <div class="row">
@@ -793,10 +805,11 @@
     </footer>
     <!-- //footer -->
 
-    <!-- js -->
+    <!-- script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/swiper.min.js"></script>
     <script src="js/index.js"></script>
+    <!-- script -->
 </body>
 
 </html>
