--- a/web_portfolio/coffeenie/index.html
+++ b/web_portfolio/coffeenie/index.html
@@ -14,17 +14,18 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 	<!-- //style -->
 
-	<!-- 웹폰트 -->
+	<!-- web font -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/variable/pretendardvariable.css" />
-	<!-- //웹폰트 -->
+	<!-- //web font -->
 </head>
 
 <body>
-	<!-- 헤더 -->
+	<!-- header -->
 	<header id="header">
 		<div class="container">
 			<div class="row">
 				<div class="header">
+					<!-- header nav -->
 					<div class="header_nav">
 						<ul>
 							<li><a href="#none">로그인</a></li>
@@ -33,7 +34,8 @@
 							<li><a href="#none">매장찾기</a></li>
 						</ul>
 					</div>
-					<!-- // 헤더 소메뉴 -->
+					<!-- //header nav -->
+					<!-- header logo -->
 					<div class="header_logo">
 						<h1>
 							<a href="https://ksysky.github.io/portfolio/web_portfolio/coffeenie/index.html" class="pc_logo">
@@ -44,7 +46,8 @@
 							</a>
 						</h1>
 					</div>
-					<!-- // 헤더 로고 -->
+					<!-- //header logo -->
+					<!-- mobile nav btn -->
 					<div class="nav_btn">
 						<h2>
 							<span class="ir_su">메뉴 버튼</span>
@@ -53,12 +56,14 @@
 							</a>
 						</h2>
 					</div>
-					<!-- // 모바일 메뉴 열기 아이콘 -->
+					<!-- //mobile nav btn -->
 				</div>
 			</div>
 		</div>
 	</header>
-	<!-- 메뉴 시작 -->
+	<!-- //header -->
+
+	<!-- main nav (pc) -->
 	<nav id="nav">
 		<h2 class="ir_su">전체 메뉴</h2>
 		<div class="nav">
@@ -109,8 +114,8 @@
 				</li>
 			</ul>
 			<div class="menuback"></div>
-		</div> <!-- // PC 메뉴 끝 -->
-		<!-- 모바일 메뉴 시작 -->
+		</div> <!-- //main nav (pc) -->
+		<!-- main nav (mobile) -->
 		<div class="m_nav">
 			<div class="nav_close">
 				<a href="#">
@@ -171,9 +176,9 @@
 			</div>
 		</div>
 		<div class="m_back"></div>
-		<!-- // 모바일 메뉴 끝 -->
+		<!-- //main nav (mobile) -->
 	</nav>
-	<!-- 배너 시작 -->
+	<!-- main banner -->
 	<section id="banner">
 		<h2 class="ir_pm">배너</h2>
 		<div class="slides">
@@ -184,12 +189,12 @@
 			<div class="s3">
 			</div>
 		</div>
-	</section> <!-- // 배너 끝 -->
-	<!-- main 부분 시작 -->
+	</section> <!-- //main banner -->
+	<!-- main -->
 	<section id="main">
 		<h2 class="ir_pm">메인</h2>
 		<div class="container">
-			<!-- NEW MENU 슬라이드 시작 -->
+			<!-- NEW MENU slide -->
 			<div class="main">
 				<div class="main_slide">
 					<h3 class="main_tit">NEW MENU</h3>
@@ -211,8 +216,8 @@
 									alt="딸기초코라떼"><span>딸기초코라떼</span></a></div>
 					</div>
 				</div>
-				<!-- // NEW MENU 슬라이드 끝 -->
-				<!-- 가맹 문의 시작 -->
+				<!-- //NEW MENU slide -->
+				<!-- coffeenie info -->
 				<div class="coffeenie_info">
 					<div class="info_text">
 						<h2>편안함 속 특별한 경험이 시작되는 곳</h2>
@@ -232,9 +237,9 @@
 						</div>
 					</div>
 				</div>
-				<!-- // 가맹 문의 끝 -->
+				<!-- //coffeenie info -->
 			</div>
-			<!-- MD 슬라이드 시작 -->
+			<!-- MD slide -->
 			<div class="md">
 				<h3 class="main_tit md_tit">MD Check!</h3>
 				<div class="md_slide">
@@ -264,10 +269,10 @@
 					</button>
 				</div>
 			</div>
-			<!-- // MD 슬라이드 끝 -->
+			<!-- //MD slide -->
 		</div>
-	</section>
-	<!-- 인스타 시작 -->
+	</section> <!-- //main -->
+	<!-- instargram -->
 	<section id="insta">
 		<div class="insta">
 			<div class="container">
@@ -292,6 +297,8 @@
 			</div>
 		</div>
 	</section>
+	<!-- //instargram -->
+	<!-- footer -->
 	<footer id="footer">
 		<div class="container">
 			<div class="row">
@@ -321,16 +328,19 @@
 			</div>
 		</div>
 	</footer>
+	<!-- //footer -->
+	<!-- top button -->
 	<div id="top_btn">
 		<a href="#none"><span class="q_btn">가맹문의</span></a>
 		<a href="#none"><span class="top_btn">top</span></a>
 	</div>
+	<!-- //top button -->
 
-	<!-- 스크립트 -->
+	<!-- script -->
 	<script src="js/jquery-3.4.1.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/index.js"></script>
-	<!-- //스크립트 -->
+	<!-- //script -->
 </body>
 
 </html>
