--- a/web_portfolio/espoir/index.html
+++ b/web_portfolio/espoir/index.html
@@ -6,18 +6,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
 	<title>에스쁘아</title>
 
+	<!-- style -->
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/slick.css">
-	<!-- //CSS 설정 -->
-
 	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap"
 		rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+	<!-- // style -->
 </head>
 
 <body>
+	<!-- header -->
 	<header id="header">
+		<!-- top header -->
 		<div class="header_nav">
 			<div class="container">
 				<div class="row">
@@ -38,12 +40,14 @@
 				</div>
 			</div>
 		</div>
-		<!-- //탑 헤더 -->
+		<!-- // top header -->
 
+		<!-- logo & nav & search -->
 		<div class="logo_nav">
 			<div class="container">
 				<div class="row">
 					<div class="header_flex">
+						<!-- nav (pc) -->
 						<nav class="nav">
 							<ul class="clearfix">
 								<li class="menu">
@@ -81,13 +85,15 @@
 							</ul>
 						</nav>
 						<div class="nav_back"></div>
-						<!-- //nav -->
+						<!-- // nav (pc) -->
 
+						<!-- logo -->
 						<div class="logo">
 							<a href="https://ksysky.github.io/portfolio/web_portfolio/espoir/index.html"><img src="img/logo.gif" alt="에스쁘아"></a>
 						</div>
-						<!-- //logo -->
+						<!-- // logo -->
 
+						<!-- search -->
 						<div class="nav_right">
 							<div class="search_box">
 								<div class="search_area">
@@ -226,7 +232,10 @@
 								<a href="#none"><span>0</span></a>
 							</div>
 						</div>
+						<!-- // search -->
 					</div>
+
+					<!-- mobile nav icon -->
 					<div class="m_nav_icon">
 						<a href="#">
 							<span></span>
@@ -234,6 +243,9 @@
 							<span></span>
 						</a>
 					</div>
+					<!-- // mobile nav icon -->
+
+					<!-- mobile nav -->
 					<div class="m_nav">
 						<nav class="m_nav_menu">
 							<div class="m_logo">
@@ -287,11 +299,15 @@
 							</div>
 						</nav>
 					</div>
+					<!-- // mobile nav -->
 				</div>
 			</div>
 		</div>
+		<!-- // logo & nav & search -->
 	</header>
+	<!-- // header -->
 
+	<!-- main banner -->
 	<section id="banner">
 		<h2 class="ir_so">에스쁘아 메인 배너</h2>
 		<div class="container">
@@ -302,7 +318,9 @@
 			</div>
 		</div>
 	</section>
+	<!-- main banner -->
 
+	<!-- best seller -->
 	<section id="best">
 		<div class="container">
 			<div class="row">
@@ -437,7 +455,9 @@
 			<a href="#none" class="viewmore">VIEW MORE</a>
 		</div>
 	</section>
-
+	<!-- // best seller -->
+	
+	<!-- real review -->
 	<section id="review">
 		<div class="container">
 			<div class="row">
@@ -513,7 +533,9 @@
 			</div>
 		</div>
 	</section>
+	<!-- // real review -->
 
+	<!-- look book -->
 	<section id="lookbook">
 		<div class="container">
 			<h2 class="top_tit">LOOK BOOK</h2>
@@ -633,7 +655,9 @@
 			</div>
 		</div>
 	</section>
+	<!-- // look book -->
 
+	<!-- notice -->
 	<article id="notice">
 		<h2 class="ir_so">공지사항 슬라이드</h2>
 		<dl>
@@ -646,7 +670,9 @@
 			<dd><a href="#none" class="more">more</a></dd>
 		</dl>
 	</article>
+	<!-- // notice -->
 
+	<!-- footer -->
 	<footer id="footer">
 		<div class="container">
 			<div class="row">
@@ -727,11 +753,15 @@
 			</div>
 		</div>
 	</footer>
+	<!-- // footer -->
 
+	<!-- scroll top btn -->
 	<div id="btn_top">
 		<button><img src="./img/btn_top.png" alt="스크롤 탑 버튼"></button>
 	</div>
+	<!-- // scroll top btn -->
 
+	<!-- review popup -->
 	<div class="popup popup_1">
 		<div class="pop_review">
 			<div class="close close_1"></div>
@@ -762,9 +792,13 @@
 			</div>
 		</div>
 	</div>
+	<!-- // review popup -->
+
+	<!-- script -->
 	<script src="js/jquery-3.5.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script src="js/index.js"></script>
+	<!-- // script -->
 </body>
 
 </html>
