--- a/web_portfolio/sub1/index.html
+++ b/web_portfolio/sub1/index.html
@@ -7,10 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>커피니 작업 내용</title>
 
+    <!-- style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
+    <!-- //style -->
 
     <!-- favicon -->
     <link rel="shortcut icon" href="img/k_favicon.ico">
@@ -18,6 +20,7 @@
 </head>
 
 <body>
+    <!-- header -->
     <header id="header">
         <div class="container">
             <div class="tit">
@@ -36,6 +39,9 @@
             </div>
         </div>
     </header>
+    <!-- //header -->
+
+    <!-- mockup img -->
     <div class="main_img">
         <div class="container">
             <div class="mockup">
@@ -43,6 +49,9 @@
             </div>
         </div>
     </div>
+    <!-- //mockup img -->
+
+    <!-- explain -->
     <div class="explain">
         <div class="container">
             <dl>
@@ -93,11 +102,17 @@
             </dl>
         </div>
     </div>
+    <!-- // explain -->
+
+    <!-- footer -->
     <footer>
         <div class="container">
             <address class="copyright">COPYRIGHT 2021 KIM SU YEON. all rights reserved.</address>
         </div>
     </footer>
+    <!-- // footer -->
+
+    <!-- scroll top btn -->
     <div class="top_btn">
         <a href="#header">
             <svg xmlns="http://www.w3.org/2000/svg" width="24.785" height="11.11" viewBox="0 0 24.785 11.11">
@@ -107,10 +122,12 @@
             </svg>
         </a>
     </div>
+    <!-- //scroll top btn -->
+
     <!-- script -->
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/custom.js"></script>
-    <!-- //script -->
+    <!-- // script -->
 </body>
 
 </html>
